# linode-openapi-hs

./: .gitignore  linode-openapi.cabal  openapi-configuration.yml  stack.yaml
cli/: LICENSE  README.md  linode-openapi-cli.cabal  package.yaml  stack.yaml
cli/src/: CmdLine.hs  Main.hs
src/: Linode.hs
src/Linode/: Common.hs  Configuration.hs  CyclicTypes.hs  ManualTypes.hs  SecuritySchemes.hs  TypeAlias.hs  Types.hs
src/Linode/Operations/: AcceptEntityTransfer.hs  AcceptServiceTransfer.hs  AddLinodeConfig.hs  AddLinodeDisk.hs  AddLinodeIP.hs  AddSSHKey.hs  AddStackScript.hs  AllocateIP.hs  AssignIPs.hs  AssignIPv4s.hs  AttachVolume.hs  BootLinodeInstance.hs  CancelAccount.hs  CancelBackups.hs  CancelObjectStorage.hs  CloneDomain.hs  CloneLinodeDisk.hs  CloneLinodeInstance.hs  CloneVolume.hs  CloseTicket.hs  CreateClient.hs  CreateCreditCard.hs  CreateDomain.hs  CreateDomainRecord.hs  CreateEntityTransfer.hs  CreateFirewallDevice.hs  CreateFirewalls.hs  CreateImage.hs  CreateLKECluster.hs  CreateLinodeInstance.hs  CreateLongviewClient.hs  CreateManagedContact.hs  CreateManagedCredential.hs  CreateManagedService.hs  CreateNodeBalancer.hs  CreateNodeBalancerConfig.hs  CreateNodeBalancerNode.hs  CreateObjectStorageBucket.hs  CreateObjectStorageKeys.hs  CreateObjectStorageObjectURL.hs  (+258 more)
src/Linode/Types/: Account.hs  Account.hs-boot  AccountSettings.hs  AccountSettings.hs-boot  AuthorizedApp.hs  AuthorizedApp.hs-boot  Backup.hs  Backup.hs-boot  CreditCard.hs  CreditCard.hs-boot  CreditCardData.hs  CreditCardData.hs-boot  Device.hs  Device.hs-boot  Devices.hs  Devices.hs-boot  Disk.hs  Disk.hs-boot  DiskPropertiesFilesystem.hs  DiskPropertiesFilesystem.hs-boot  DiskRequest.hs  DiskRequest.hs-boot  Domain.hs  Domain.hs-boot  DomainRecord.hs  DomainRecord.hs-boot  EntityTransfer.hs  EntityTransfer.hs-boot  EntityTransferPropertiesEntities.hs  EntityTransferPropertiesEntities.hs-boot  ErrorObject.hs  ErrorObject.hs-boot  Event.hs  Event.hs-boot  Firewall.hs  Firewall.hs-boot  FirewallDevices.hs  FirewallDevices.hs-boot  FirewallDevicesPropertiesEntity.hs  FirewallDevicesPropertiesEntity.hs-boot  (+164 more)
