cabal-version: 1.12

name:           linode-openapi
version:        0.1.0.0
build-type:     Simple

library
  exposed-modules:
      Linode
      Linode.Operations.GetAccount
      Linode.Operations.UpdateAccount
      Linode.Operations.CancelAccount
      Linode.Operations.CreateCreditCard
      Linode.Operations.GetEntityTransfers
      Linode.Operations.CreateEntityTransfer
      Linode.Operations.GetEntityTransfer
      Linode.Operations.DeleteEntityTransfer
      Linode.Operations.AcceptEntityTransfer
      Linode.Operations.GetEvents
      Linode.Operations.GetEvent
      Linode.Operations.EventRead
      Linode.Operations.EventSeen
      Linode.Operations.GetInvoices
      Linode.Operations.GetInvoice
      Linode.Operations.GetInvoiceItems
      Linode.Operations.GetAccountLogins
      Linode.Operations.GetAccountLogin
      Linode.Operations.GetMaintenance
      Linode.Operations.GetNotifications
      Linode.Operations.GetClients
      Linode.Operations.CreateClient
      Linode.Operations.GetClient
      Linode.Operations.UpdateClient
      Linode.Operations.DeleteClient
      Linode.Operations.ResetClientSecret
      Linode.Operations.GetClientThumbnail
      Linode.Operations.SetClientThumbnail
      Linode.Operations.GetPaymentMethods
      Linode.Operations.CreatePaymentMethod
      Linode.Operations.GetPaymentMethod
      Linode.Operations.DeletePaymentMethod
      Linode.Operations.MakePaymentMethodDefault
      Linode.Operations.GetPayments
      Linode.Operations.CreatePayment
      Linode.Operations.CreatePayPalPayment
      Linode.Operations.ExecutePayPalPayment
      Linode.Operations.GetPayment
      Linode.Operations.CreatePromoCredit
      Linode.Operations.GetServiceTransfers
      Linode.Operations.CreateServiceTransfer
      Linode.Operations.GetServiceTransfer
      Linode.Operations.DeleteServiceTransfer
      Linode.Operations.AcceptServiceTransfer
      Linode.Operations.GetAccountSettings
      Linode.Operations.UpdateAccountSettings
      Linode.Operations.EnableAccountManged
      Linode.Operations.GetTransfer
      Linode.Operations.GetUsers
      Linode.Operations.CreateUser
      Linode.Operations.GetUser
      Linode.Operations.UpdateUser
      Linode.Operations.DeleteUser
      Linode.Operations.GetUserGrants
      Linode.Operations.UpdateUserGrants
      Linode.Operations.GetDomains
      Linode.Operations.CreateDomain
      Linode.Operations.ImportDomain
      Linode.Operations.GetDomain
      Linode.Operations.UpdateDomain
      Linode.Operations.DeleteDomain
      Linode.Operations.CloneDomain
      Linode.Operations.GetDomainRecords
      Linode.Operations.CreateDomainRecord
      Linode.Operations.GetDomainRecord
      Linode.Operations.UpdateDomainRecord
      Linode.Operations.DeleteDomainRecord
      Linode.Operations.GetDomainZone
      Linode.Operations.GetImages
      Linode.Operations.CreateImage
      Linode.Operations.Post_images_upload
      Linode.Operations.GetImage
      Linode.Operations.UpdateImage
      Linode.Operations.DeleteImage
      Linode.Operations.GetLinodeInstances
      Linode.Operations.CreateLinodeInstance
      Linode.Operations.GetLinodeInstance
      Linode.Operations.UpdateLinodeInstance
      Linode.Operations.DeleteLinodeInstance
      Linode.Operations.GetBackups
      Linode.Operations.CreateSnapshot
      Linode.Operations.CancelBackups
      Linode.Operations.EnableBackups
      Linode.Operations.GetBackup
      Linode.Operations.RestoreBackup
      Linode.Operations.BootLinodeInstance
      Linode.Operations.CloneLinodeInstance
      Linode.Operations.GetLinodeConfigs
      Linode.Operations.AddLinodeConfig
      Linode.Operations.GetLinodeConfig
      Linode.Operations.UpdateLinodeConfig
      Linode.Operations.DeleteLinodeConfig
      Linode.Operations.GetLinodeDisks
      Linode.Operations.AddLinodeDisk
      Linode.Operations.GetLinodeDisk
      Linode.Operations.UpdateDisk
      Linode.Operations.DeleteDisk
      Linode.Operations.CloneLinodeDisk
      Linode.Operations.ResetDiskPassword
      Linode.Operations.ResizeDisk
      Linode.Operations.GetLinodeFirewalls
      Linode.Operations.GetLinodeIPs
      Linode.Operations.AddLinodeIP
      Linode.Operations.GetLinodeIP
      Linode.Operations.UpdateLinodeIP
      Linode.Operations.RemoveLinodeIP
      Linode.Operations.MigrateLinodeInstance
      Linode.Operations.MutateLinodeInstance
      Linode.Operations.GetLinodeNodeBalancers
      Linode.Operations.ResetLinodePassword
      Linode.Operations.RebootLinodeInstance
      Linode.Operations.RebuildLinodeInstance
      Linode.Operations.RescueLinodeInstance
      Linode.Operations.ResizeLinodeInstance
      Linode.Operations.ShutdownLinodeInstance
      Linode.Operations.GetLinodeStats
      Linode.Operations.GetLinodeStatsByYearMonth
      Linode.Operations.GetLinodeTransfer
      Linode.Operations.GetLinodeTransferByYearMonth
      Linode.Operations.GetLinodeVolumes
      Linode.Operations.GetKernels
      Linode.Operations.GetKernel
      Linode.Operations.GetStackScripts
      Linode.Operations.AddStackScript
      Linode.Operations.GetStackScript
      Linode.Operations.UpdateStackScript
      Linode.Operations.DeleteStackScript
      Linode.Operations.GetLinodeTypes
      Linode.Operations.GetLinodeType
      Linode.Operations.GetLKEClusters
      Linode.Operations.CreateLKECluster
      Linode.Operations.GetLKECluster
      Linode.Operations.PutLKECluster
      Linode.Operations.DeleteLKECluster
      Linode.Operations.GetLKEClusterAPIEndpoints
      Linode.Operations.GetLKEClusterKubeconfig
      Linode.Operations.DeleteLKEClusterKubeconfig
      Linode.Operations.GetLKEClusterNode
      Linode.Operations.DeleteLKEClusterNode
      Linode.Operations.PostLKEClusterNodeRecycle
      Linode.Operations.GetLKEClusterPools
      Linode.Operations.PostLKEClusterPools
      Linode.Operations.GetLKENodePool
      Linode.Operations.PutLKENodePool
      Linode.Operations.DeleteLKENodePool
      Linode.Operations.PostLKEClusterPoolRecycle
      Linode.Operations.PostLKEClusterRecycle
      Linode.Operations.GetLKEVersions
      Linode.Operations.GetLKEVersion
      Linode.Operations.GetLongviewClients
      Linode.Operations.CreateLongviewClient
      Linode.Operations.GetLongviewClient
      Linode.Operations.UpdateLongviewClient
      Linode.Operations.DeleteLongviewClient
      Linode.Operations.GetLongviewPlan
      Linode.Operations.UpdateLongviewPlan
      Linode.Operations.GetLongviewSubscriptions
      Linode.Operations.GetLongviewSubscription
      Linode.Operations.GetManagedContacts
      Linode.Operations.CreateManagedContact
      Linode.Operations.GetManagedContact
      Linode.Operations.UpdateManagedContact
      Linode.Operations.DeleteManagedContact
      Linode.Operations.GetManagedCredentials
      Linode.Operations.CreateManagedCredential
      Linode.Operations.ViewManagedSSHKey
      Linode.Operations.GetManagedCredential
      Linode.Operations.UpdateManagedCredential
      Linode.Operations.DeleteManagedCredential
      Linode.Operations.UpdateManagedCredentialUsernamePassword
      Linode.Operations.GetManagedIssues
      Linode.Operations.GetManagedIssue
      Linode.Operations.GetManagedLinodeSettings
      Linode.Operations.GetManagedLinodeSetting
      Linode.Operations.UpdateManagedLinodeSetting
      Linode.Operations.GetManagedServices
      Linode.Operations.CreateManagedService
      Linode.Operations.GetManagedService
      Linode.Operations.UpdateManagedService
      Linode.Operations.DeleteManagedService
      Linode.Operations.DisableManagedService
      Linode.Operations.EnableManagedService
      Linode.Operations.GetManagedStats
      Linode.Operations.GetFirewalls
      Linode.Operations.CreateFirewalls
      Linode.Operations.GetFirewall
      Linode.Operations.UpdateFirewall
      Linode.Operations.DeleteFirewall
      Linode.Operations.GetFirewallDevices
      Linode.Operations.CreateFirewallDevice
      Linode.Operations.GetFirewallDevice
      Linode.Operations.DeleteFirewallDevice
      Linode.Operations.GetFirewallRules
      Linode.Operations.UpdateFirewallRules
      Linode.Operations.GetIPs
      Linode.Operations.AllocateIP
      Linode.Operations.AssignIPs
      Linode.Operations.ShareIPs
      Linode.Operations.GetIP
      Linode.Operations.UpdateIP
      Linode.Operations.AssignIPv4s
      Linode.Operations.ShareIPv4s
      Linode.Operations.GetIPv6Pools
      Linode.Operations.GetIPv6Ranges
      Linode.Operations.PostIPv6Range
      Linode.Operations.GetIPv6Range
      Linode.Operations.DeleteIPv6Range
      Linode.Operations.GetVLANs
      Linode.Operations.GetNodeBalancers
      Linode.Operations.CreateNodeBalancer
      Linode.Operations.GetNodeBalancer
      Linode.Operations.UpdateNodeBalancer
      Linode.Operations.DeleteNodeBalancer
      Linode.Operations.GetNodeBalancerConfigs
      Linode.Operations.CreateNodeBalancerConfig
      Linode.Operations.GetNodeBalancerConfig
      Linode.Operations.UpdateNodeBalancerConfig
      Linode.Operations.DeleteNodeBalancerConfig
      Linode.Operations.GetNodeBalancerConfigNodes
      Linode.Operations.CreateNodeBalancerNode
      Linode.Operations.GetNodeBalancerNode
      Linode.Operations.UpdateNodeBalancerNode
      Linode.Operations.DeleteNodeBalancerConfigNode
      Linode.Operations.RebuildNodeBalancerConfig
      Linode.Operations.Get_nodebalancers__nodeBalancerId__stats
      Linode.Operations.GetObjectStorageBuckets
      Linode.Operations.CreateObjectStorageBucket
      Linode.Operations.GetObjectStorageBucketinCluster
      Linode.Operations.GetObjectStorageBucket
      Linode.Operations.DeleteObjectStorageBucket
      Linode.Operations.UpdateObjectStorageBucketAccess
      Linode.Operations.ModifyObjectStorageBucketAccess
      Linode.Operations.ViewObjectStorageBucketACL
      Linode.Operations.UpdateObjectStorageBucketACL
      Linode.Operations.GetObjectStorageBucketContent
      Linode.Operations.CreateObjectStorageObjectURL
      Linode.Operations.GetObjectStorageSSL
      Linode.Operations.CreateObjectStorageSSL
      Linode.Operations.DeleteObjectStorageSSL
      Linode.Operations.CancelObjectStorage
      Linode.Operations.GetObjectStorageClusters
      Linode.Operations.GetObjectStorageCluster
      Linode.Operations.GetObjectStorageKeys
      Linode.Operations.CreateObjectStorageKeys
      Linode.Operations.GetObjectStorageKey
      Linode.Operations.UpdateObjectStorageKey
      Linode.Operations.DeleteObjectStorageKey
      Linode.Operations.GetObjectStorageTransfer
      Linode.Operations.GetProfile
      Linode.Operations.UpdateProfile
      Linode.Operations.GetProfileApps
      Linode.Operations.GetProfileApp
      Linode.Operations.DeleteProfileApp
      Linode.Operations.GetDevices
      Linode.Operations.GetTrustedDevice
      Linode.Operations.RevokeTrustedDevice
      Linode.Operations.GetProfileGrants
      Linode.Operations.GetProfileLogins
      Linode.Operations.GetProfileLogin
      Linode.Operations.GetUserPreferences
      Linode.Operations.UpdateUserPreferences
      Linode.Operations.GetSSHKeys
      Linode.Operations.AddSSHKey
      Linode.Operations.GetSSHKey
      Linode.Operations.UpdateSSHKey
      Linode.Operations.DeleteSSHKey
      Linode.Operations.TfaDisable
      Linode.Operations.TfaEnable
      Linode.Operations.TfaConfirm
      Linode.Operations.GetPersonalAccessTokens
      Linode.Operations.CreatePersonalAccessToken
      Linode.Operations.GetPersonalAccessToken
      Linode.Operations.UpdatePersonalAccessToken
      Linode.Operations.DeletePersonalAccessToken
      Linode.Operations.GetRegions
      Linode.Operations.GetRegion
      Linode.Operations.GetTickets
      Linode.Operations.CreateTicket
      Linode.Operations.GetTicket
      Linode.Operations.CreateTicketAttachment
      Linode.Operations.CloseTicket
      Linode.Operations.GetTicketReplies
      Linode.Operations.CreateTicketReply
      Linode.Operations.GetTags
      Linode.Operations.CreateTag
      Linode.Operations.GetTaggedObjects
      Linode.Operations.DeleteTag
      Linode.Operations.GetVolumes
      Linode.Operations.CreateVolume
      Linode.Operations.GetVolume
      Linode.Operations.UpdateVolume
      Linode.Operations.DeleteVolume
      Linode.Operations.AttachVolume
      Linode.Operations.CloneVolume
      Linode.Operations.DetachVolume
      Linode.Operations.ResizeVolume
      Linode.Types
      Linode.CyclicTypes
      Linode.Types.AccountSettings
      Linode.Types.AuthorizedApp
      Linode.Types.CreditCard
      Linode.Types.CreditCardData
      Linode.Types.Device
      Linode.Types.Disk
      Linode.Types.Domain
      Linode.Types.DomainRecord
      Linode.Types.EntityTransfer
      Linode.Types.ErrorObject
      Linode.Types.Event
      Linode.Types.FirewallDevices
      Linode.Types.FirewallRuleConfig
      Linode.Types.GooglePayData
      Linode.Types.Grant
      Linode.Types.IPAddress
      Linode.Types.IPAddressPrivate
      Linode.Types.IPAddressV6LinkLocal
      Linode.Types.IPAddressV6Slaac
      Linode.Types.IPv6Pool
      Linode.Types.IPv6Range
      Linode.Types.IPv6RangeBGP
      Linode.Types.Image
      Linode.Types.Invoice
      Linode.Types.InvoiceItem
      Linode.Types.Kernel
      Linode.Types.LKECluster
      Linode.Types.LKENodeStatus
      Linode.Types.LKEVersion
      Linode.Types.Linode
      Linode.Types.LinodeConfigInterface
      Linode.Types.LinodeStats
      Linode.Types.LinodeType
      Linode.Types.Login
      Linode.Types.LongviewClient
      Linode.Types.LongviewPlan
      Linode.Types.LongviewSubscription
      Linode.Types.Maintenance
      Linode.Types.ManagedContact
      Linode.Types.ManagedCredential
      Linode.Types.ManagedIssue
      Linode.Types.ManagedLinodeSettings
      Linode.Types.ManagedService
      Linode.Types.NodeBalancer
      Linode.Types.NodeBalancerConfig
      Linode.Types.NodeBalancerNode
      Linode.Types.NodeBalancerStats
      Linode.Types.Notification
      Linode.Types.OAuthClient
      Linode.Types.ObjectStorageBucket
      Linode.Types.ObjectStorageCluster
      Linode.Types.ObjectStorageKey
      Linode.Types.ObjectStorageObject
      Linode.Types.ObjectStorageSSL
      Linode.Types.ObjectStorageSSLResponse
      Linode.Types.PaginationEnvelope
      Linode.Types.PayPal
      Linode.Types.PayPalData
      Linode.Types.PayPalExecute
      Linode.Types.Payment
      Linode.Types.PaymentRequest
      Linode.Types.PersonalAccessToken
      Linode.Types.Profile
      Linode.Types.Promotion
      Linode.Types.Region
      Linode.Types.SSHKey
      Linode.Types.SSHKeyRequest
      Linode.Types.ServiceTransfer
      Linode.Types.StatsData
      Linode.Types.StatsDataUnavailable
      Linode.Types.SupportTicket
      Linode.Types.SupportTicketReply
      Linode.Types.SupportTicketRequest
      Linode.Types.Tag
      Linode.Types.Transfer
      Linode.Types.TrustedDevice
      Linode.Types.User
      Linode.Types.UserDefinedField
      Linode.Types.Vlans
      Linode.Types.WarningObject
      Linode.Types.Account
      Linode.Types.Devices
      Linode.Types.Firewall
      Linode.Types.GrantsResponse
      Linode.Types.LKENodePool
      Linode.Types.LinodeConfigInterfaces
      Linode.Types.PaymentMethod
      Linode.Types.RescueDevices
      Linode.Types.StackScript
      Linode.Types.StatsDataAvailable
      Linode.Types.LinodeConfig
      Linode.Configuration
      Linode.SecuritySchemes
      Linode.Common
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , text
    , ghc-prim
    , http-conduit
    , http-client
    , http-types
    , bytestring
    , aeson
    , unordered-containers
    , vector
    , scientific
    , time
    , mtl
    , transformers
  default-language: Haskell2010
